--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "def three_x_y(c,x,y):\n",
-    "    out = 3 * x * y\n",
+    "    out = c * x * y\n",
     "    return out\n"
    ]
   },
