--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
     "\n",
     "y_at_one_trace = trace_values(x_value_list, y_values(x_value_list, 1), mode = 'lines', name = 'f(x, y) at y=1') or {}\n",
     "\n",
-    "y_at_three_trace = trace_values(zero_to_ten, y_values_for_at_three(zero_to_ten),  mode = 'lines',  name = 'f(x, y) at y=3') or {}\n",
+    "y_at_three_trace = trace_values(x_value_list, y_value(zero_to_ten),  mode = 'lines',  name = 'f(x, y) at y=3') or {}\n",
     "\n",
     "#y_at_six_trace = trace_values(zero_to_ten, y_values_for_at_six(zero_to_ten),  mode = 'lines', name = 'f(x, y) at y=6') or {}\n",
     "\n",
